<resources>
    <string name="app_name">Shop Me</string>

    <!--Login Screen -->
    <string name="login_text">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="register_button">Register</string>

    <!--Signup Screen -->
    <string name="signup_text">CREATE AN ACCOUNT</string>
    <string name="person_first_name">First Name</string>
    <string name="person_last_name">Last Name</string>
    <string name="person_email">Email</string>
    <string name="person_password">Password</string>
    <string name="person_confirm_password">Confirm Password</string>
    <string name="terms_conditions">I agreed to the Terms &amp; Conditions</string>
    <string name="register_acc_button">Register</string>
    <string name="have_account">Already have an Account?</string>
    <string name="signin_button">Signin</string>

    <!--Bottom Nav menu -->
    <string name="homeName">Home</string>
    <string name="productsName">Products</string>
    <string name="ordersName">Orders</string>
    <string name="soldProductsName">Sold Products</string>

    <!--Internal Manifest-->
    <string name="title_activity_shop_nav">MainActivity</string>

    <!--Loader Message-->
    <string name="loader_dialog_text">Please Wait</string>

    <!--New Product Fragment -->
    <string name="new_product_fragment_title">New Product</string>
    <string name="product_name_hint">Product Name</string>
    <string name="product_price_hint">Product Price</string>
    <string name="product_description_hint">Product Description</string>
    <string name="product_quantity_hint">Product Quantity</string>
    <string name="btn_post_product">Post Product</string>

    <!--Select Image Fragment -->
    <string name="select_image_text">Select picture</string>
    <string name="select_camera">Camera</string>
    <string name="select_gallery">Gallery</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>