<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/homeName"
        android:icon="@drawable/ic_home_icon"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/productsFragment"
        android:title="@string/productsName"
        android:icon="@drawable/ic_products_icon"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/ordersFragment"
        android:title="@string/ordersName"
        android:icon="@drawable/ic_orders_icon"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/soldProductsFragment"
        android:title="@string/soldProductsName"
        android:icon="@drawable/ic_sold_icon"
        app:showAsAction="ifRoom"/>

</menu>