<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.blair.shopme.view.fragments.HomeFragment"
        android:label="@string/homeName"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/productsFragment"
        android:name="com.blair.shopme.view.fragments.ProductsFragment"
        android:label="@string/productsName"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_productsFragment_to_newProductFragment"
            app:destination="@id/newProductFragment" />
    </fragment>

    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.blair.shopme.view.fragments.OrdersFragment"
        android:label="@string/ordersName"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/soldProductsFragment"
        android:name="com.blair.shopme.view.fragments.SoldProductsFragment"
        android:label="@string/soldProductsName"
        tools:layout="@layout/fragment_products" />
    <fragment
        android:id="@+id/newProductFragment"
        android:name="com.blair.shopme.view.fragments.NewProductFragment"
        android:label="@string/new_product_fragment_title"
        tools:layout="@layout/fragment_new_product" />
</navigation>