<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_me"
    tools:context=".view.fragments.LoginFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:id="@+id/logoSpace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_me">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginLeft="100dp"
                android:src="@drawable/shopmelogo"
                android:layout_gravity="center_horizontal"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_me"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_below="@+id/logoSpace">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text"
                android:fontFamily="sans-serif-black"
                android:textSize="24sp"
                android:textColor="@color/primaryColor"
                android:layout_gravity="center_horizontal"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:background="@drawable/input_background"
                    android:paddingLeft="20dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:background="@drawable/input_background"
                    android:paddingLeft="20dp"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:text="@string/login_button"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="  "/>

                <TextView
                    android:id="@+id/buttonRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/register_button"
                    android:textColor="@color/text1"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>