<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_me">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frame_imagePicker"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivProductImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                tools:srcCompat="@tools:sample/avatars"
                android:backgroundTint="@color/black"/>

            <ImageView
                android:id="@+id/iv_add_product_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:padding="20dp"
                app:srcCompat="@drawable/ic_add_photo" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/background_me"
            android:padding="20dp"
            android:layout_below="@+id/frame_imagePicker">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:hint="@string/product_name_hint"
                    android:paddingLeft="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:hint="@string/product_price_hint"
                    android:paddingLeft="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/input_background"
                    android:hint="@string/product_description_hint"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:paddingLeft="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:hint="@string/product_quantity_hint"
                    android:paddingLeft="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:text="@string/btn_post_product"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>