<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/input_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/selectPicDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image_text"
            android:textColor="@color/primaryDarkColor"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/cameraLocation"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/ic_camera_icon" />

                <TextView
                    android:id="@+id/textCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_camera"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="16sp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/galleryLocation"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/ic_gallery_storage" />

                <TextView
                    android:id="@+id/textGallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_gallery"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="16sp"
                    android:layout_gravity="center"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>